# video-spanish-close-captions

./: .gitignore  README.md  interface_gradio.py  pyproject.toml  requirements.txt  speech-to-text.py  test.py  text-to-speech.py
ui/: interface_gradio.py
video-spanish-close-captions/: speech-to-text.py  text-to-speech.py
videos/miracle-blind/: 2023-12-05_01-53-44_UTC.json.xz
