[tool.poetry]
name = "video-spanish-close-captions"
version = "0.1.0"
description = "Extract captiond from video and audio, converto video to mp3"
authors = ["Christian Bueno <chmabuen@espol.edu.ec>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
annotated-types = "^0.7.0"
anyio = "^4.8.0"
certifi = "^2025.1.31"
charset-normalizer = "^3.4.1"
distro = "^1.9.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
instaloader = "^4.14.1"
openai = "^1.65.1"
requests = "^2.32.3"
sniffio = "^1.3.1"
tqdm = "^4.67.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
